    kerberos.ldif if you're hoping to use the Kerberos schema on Debian.
    Also, the bugs in kerberos.ldif have been corrected; Closes: #660767
  * Suggest krb5-k5tls from krb5-user, Closes: #887937
  * Merge dep8 tests, thanks Canonical  and Andreas Hasenack (LP:
    #1677881)

  [ Ondřej Nový ]
  * d/changelog: Remove trailing whitespaces
  * d/control: Remove trailing whitespaces

 -- Sam Hartman <hartmans@debian.org>  Mon, 16 Jul 2018 20:09:54 -0400

krb5 (1.16-2) unstable; urgency=medium

  * Update location of packaging GIT repository
  * krb5-config was incorrectly changed to include the multiarch tripple
    in include paths.  However, our include files are not architecture
    specific; fix krb5-config to not include a multiarch tripple in
    include paths, Closes: #887810

 -- Sam Hartman <hartmans@debian.org>  Sat, 20 Jan 2018 11:02:57 -0500

krb5 (1.16-1) unstable; urgency=medium

  * New Upstream Version, Closes: #884490
      - libkdb5 soname is now 9
  * Note that we break moonshot-gss-eap less than 1.0.1.  In particular
    because /etc/gss/mech.d/README is no longer installed,
    moonshot-gss-eap will drop a stray file in /usr/etc.
  *  make krb5-config identical on all architectures and make
    krb5-multidev and libkrb5-dev multiarch installable; solution based on
    discussion with Hugh McMaster, Closes: #881597

 -- Sam Hartman <hartmans@debian.org>  Thu, 04 Jan 2018 10:29:06 -0500

krb5 (1.15.2-2) unstable; urgency=medium

  * Apply upstream patch removing a fixed-size buffer in PKINIT client code,
    Closes: #871698

 -- Benjamin Kaduk <kaduk@mit.edu>  Sat, 28 Oct 2017 18:09:28 -0500

krb5 (1.15.2-1) unstable; urgency=medium

  [ Sam Hartman ]
  * Fix plugins directory, thanks Andreas Hasenack, Closes: #872140
  * Move kpropd to krb5-kpropd since stretch is released
  * Mark krb5-kdc and krb5-addmin-server as multi-arch foreign

  [ Benjamin Kaduk ]
  * New Upstream Version