@@ -15,6 +15,7 @@ krb5 (1.16.1-1) UNRELEASED; urgency=medium
   [ Ondřej Nový ]
   * d/changelog: Remove trailing whitespaces
   * d/control: Remove trailing whitespaces
+  * d/rules: Remove trailing whitespaces
 
  -- Sam Hartman <hartmans@debian.org>  Mon, 16 Jul 2018 20:09:54 -0400
 
